Actions
Bug #12101
closedlibsldap: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../common/ns_connmgmt.c: In function 'setup_mt_conn': ../common/ns_connmgmt.c:355:29: error: cast between incompatible function types from 'thread_t (*)(void)' {aka 'unsigned int (*)(void)'} to 'void * (*)(void)' [ -Werror=cast-function-type] extrafns.ltf_threadid_fn = (void * (*)(void))thr_self; ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit cc98049dd80db1f6cbe13cbd4845c7a4f0e0c863
commit cc98049dd80db1f6cbe13cbd4845c7a4f0e0c863 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T15:05:21.000Z 12101 libsldap: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Matthias Scheler <mscheler@tintri.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions